<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Addit</string>
    <string name="main_title">Addit!</string>
	<string name="continue_label">Continue</string>
	<string name="new_game_label">New Game</string>
	<string name="about_label">About</string>
	<string name="exit_label">Exit</string>

	<string name="about_title">About Android Sudoku</string>
	<string name="about_text">\	    
The purpose of the game is to clear the board.
If the board becomes full, the game is lost.
At each step, the current digit is placed on 
the board in a free spot indicated by you.
If the sum of the digits in the neighboring 
squares adds up to the current digit, then the 
digit and its neighbors are cleared from the board.
Good luck.
	</string>	
	
	<string name="settings_label">Settings...</string>
	<string name="settings_title">Addit settings</string>
	<string name="settings_shortcut">s</string>
	<string name="music_title">Music</string>
	<string name="music_summary">Play background music</string>
	<string name="hints_title">Hints</string>
	<string name="hints_summary">Show hints during play</string>

	<string name="new_game_title">Difficulty</string>
	<string name="easy_label">Easy</string>
	<string name="medium_label">Medium</string>
	<string name="hard_label">Hard</string>

	<string name="game_title">Game</string>
	<string name="no_moves_label">No moves</string>
	<string name="keypad_title">Keypad</string>

</resources>
